syntax = "proto3";

package todo;

service TodoService {
    // Local CRUD
    rpc CreateTodo(CreateTodoDto) returns (Todo) {}
    rpc GetTodos(Empty) returns (Todos) {}
    rpc GetTodoById(TodoByIdDto) returns (Todo) {}
    rpc UpdateTodoById(UpdateTodoDto) returns (Empty) {}
    rpc DeleteTodoById(TodoByIdDto) returns (Empty) {}

    // Remote CRUD (for cross-app communication)
    rpc CreateRemoteTodo(CreateTodoDto) returns (Todo) {}
    rpc GetRemoteTodos(Empty) returns (Todos) {}
    rpc GetRemoteTodoById(TodoByIdDto) returns (Todo) {}
    rpc UpdateRemoteTodoById(UpdateTodoDto) returns (Empty) {}
    rpc DeleteRemoteTodoById(TodoByIdDto) returns (Empty) {}
}

message Empty {}

message Todo {
    string id = 1;
    string title = 2;
    bool completed = 3;
}

message CreateTodoDto {
    string title = 1;
}

message Todos {
    repeated Todo todos = 1;
}

message UpdateTodoDto {
    string id = 1;
    string title = 2;
    bool completed = 3;
}

message TodoByIdDto {
    string id = 1;
}
